# circuit_visualization

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  configure.sh  docker_run.sh  setpath.sh
coverage/: README.md
experiments/circuit_model_library/: circuit_model_library.cpp  circuit_model_library.hpp
experiments/computational_framework/: computational_framework.hpp  recursive_graph_node.hpp
experiments/fast_memcpy/: build.sh  tmp.cpp
experiments/function_eval/: CMakeLists.txt  README.md
experiments/function_eval/src/: tmp.cpp
experiments/packed_bits_array/: CMakeLists.txt  build.sh  configure.sh  tmp.cpp
experiments/packed_bits_array/src/: CMakeLists.txt  tmp.cpp  tmp2.cpp
experiments/rayplug/: rayplug.cpp  rayplug.hpp  rayplug_self_test.cpp  rayplug_self_test.hpp
experiments/vulkan_test/: configure.sh
experiments/vulkan_test/src/: main.cpp
experiments/vulkan_tutorial/: .gitignore  CMakeLists.txt  build.sh  configure.sh
experiments/vulkan_tutorial/include/standard_defs/: standard_defs.hpp  standard_includes.hpp
experiments/vulkan_tutorial/shaders/: shader.frag  shader.vert
experiments/vulkan_tutorial/src/: CMakeLists.txt  main.cpp  main_after_presentation.cpp  main_after_presentation2.cpp  main_before_presentation.cpp  main_garuda.cpp  main_host_laptop.cpp  main_host_laptop2.cpp  main_integrated_gpu_started_to_work.cpp  main_tmp.cpp  main_tmp2.cpp  main_tmp3.cpp  main_tmp4.cpp  main_tmp5.cpp  main_tmp6.cpp  main_tmp7.cpp  main_tmp_tmp.cpp
include/animation_demo/: animation_demo.hpp  animation_demo_self_test.hpp
include/circuit_animator/: circuit_animator.hpp
include/circuit_model/: circuit_model.hpp  circuit_model_self_test.hpp
include/circuit_solver/: circuit_solver.hpp  circuit_solver_self_test.hpp
include/ffmpeg_rendering/: ffmpeg.hpp
include/raylib_probe/: raylib_probe.hpp  raylib_probe_self_test.hpp
include/recursive_circuit_models/recursive_circuit01/: recursive_circuit01.hpp  recursive_circuit01_self_test.hpp
include/standard_defs/: standard_defs.hpp  standard_includes.hpp
scripts/: graph_generator.sh
scripts/recursive_circuit/: generate_templates.py
scripts/recursive_circuit/recursive_circuit01/: generate_templates.py  generate_templates_2.py
src/: CMakeLists.txt  main.cpp
src/animation_demo/: CMakeLists.txt  animation_demo.cpp  animation_demo_self_test.cpp
src/circuit_animator/: CMakeLists.txt  circuit_animator.cpp
src/circuit_model/: CMakeLists.txt  circuit_model.cpp  circuit_model_self_test.cpp
src/circuit_solver/: CMakeLists.txt  circuit_solver.cpp  circuit_solver_self_test.cpp
src/ffmpeg_rendering/: CMakeLists.txt  ffmpeg_linux.cpp
src/raylib_probe/: CMakeLists.txt  raylib_probe.cpp  raylib_probe_self_test.cpp
src/recursive_circuit_models/: CMakeLists.txt
src/recursive_circuit_models/recursive_circuit01/: CMakeLists.txt  recursive_circuit01.cpp  recursive_circuit01_self_test.cpp
src/standard_defs/: CMakeLists.txt  standard_defs.cpp
tests/integration_tests/: README.md
tests/performance_tests/: README.md
tests/unit_tests/: README.md
